--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             vertical-align: middle;
             margin: 0;
             min-width: 100px;
-            max-height: 280px;
+            /*max-height: 280px;*/
             display: inline-block;
             border-radius: 20px;
 
